# prefix-search

./: CMakeLists.txt  CMakePresets.json  Find.cpp  README.md  StandardAlgorithms.h  main.cpp
bench/: Benchmark.cpp  CMakeLists.txt
src/: CMakeLists.txt  Find.cpp  Find.h  PrefixTree.cpp  PrefixTree.h  SearchTree.cpp  SearchTree.h  StandardAlgorithms.cpp  StandardAlgorithms.h
test/: CMakeLists.txt  FindTest.cpp  SerializeTests.cpp
